# ancient-compute

./: .bazelrc  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  AGENTS.md  AGENTS.md.original  ARCHITECTURE.md  AUDIT_COMPLETION_REPORT.md  AUDIT_EXECUTIVE_SUMMARY.md  BABBAGE_ASSEMBLER_SPECIFICATION.md  BABBAGE_CODE_GENERATOR_SPECIFICATION.md  BABBAGE_COMPLETE_WHITEPAPER.tex  BABBAGE_FILES_MOVED_README.md  BABBAGE_IR_SPECIFICATION.md  BABBAGE_MASTER_REFERENCE.md  BUILD.bazel  CLAUDE.md  COMPATIBILITY_MATRIX.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_SYNTHESIS_SUMMARY.md  CONTENT_SCHEMA_DESIGN.md  CONTRIBUTING.md  DOCKER_INFRASTRUCTURE.md  EXECUTION_PLAN_GRANULAR.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY_EDUCATION_COMPONENTS.md  LANGUAGE_SERVICES_ARCHITECTURE.md  LANGUAGE_SERVICE_ARCHITECTURE.md  LANGUAGE_SERVICE_SPECIFICATION.md  MASTER_ROADMAP.md  MIGRATION_CHECKLIST.md  MIGRATION_PLAN.md  MODULE.bazel  MULTI_AGENT_SYNTHESIS.md  MULTI_REPO_SUMMARY.md  (+62 more)
backend/: .env.example  .pylintrc  BUILD.bazel  Dockerfile  __init__.py  alembic.ini  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.md  requirements.txt  restructure.py  setup.py
backend/alembic/: README  env.py
backend/alembic/versions/: aeff3d1c3894_initial_schema.py
backend/services/: __init__.py  base_executor.py
backend/services/languages/: __init__.py  c_service.py  haskell_service.py  python_service.py
backend/services/security/: resource_limits.py
backend/services/tests/: __init__.py  test_executors.py
backend/src/: __init__.py  auth.py  config.py  database.py  ir_types.py  main.py  metrics.py  rate_limiting.py  seed_comprehensive.py  seeder.py
backend/src/api/: __init__.py  code_execution.py  emulator.py  execution.py  machines.py  router.py  timeline.py  tools_router.py
backend/src/assembler/: __init__.py  assembler.py
backend/src/codegen/: __init__.py  codegen.py  emitter.py  liveness.py  regalloc.py  selector.py
backend/src/compilers/: __init__.py  c_ast.py  c_compiler.py  c_lexer.py  c_parser.py  c_types.py  haskell_ast.py  haskell_compiler.py  haskell_lexer.py  haskell_parser.py  haskell_types.py  idris_ast.py  idris_compiler.py  idris_lexer.py  idris_parser.py  idris_types.py  java_ast.py  java_compiler.py  java_lexer.py  java_parser.py  java_types.py  lisp_ast.py  lisp_compiler.py  lisp_lexer.py  lisp_parser.py  lisp_types.py  parsetab.py  python_ast.py  python_compiler.py  python_lexer.py  python_parser.py  python_types.py  systemf_ast.py  systemf_compiler.py  systemf_lexer.py  systemf_parser.py  systemf_types.py  test_c_compiler.py  test_haskell_compiler.py  test_idris_compiler.py  (+5 more)
backend/src/emulator/: __init__.py  abacus.py  adapter.py  analytical_engine.py  antikythera.py  astrolabe.py  barrels.py  bernoulli.py  bombe.py  card_designer.py  card_reader.py  carry.py  clay_tokens.py  colossus.py  columns.py  curta.py  debugger.py  edsac.py  electromagnetic.py  eniac.py  enigma.py  fourmilab_compat.py  grant_difference_engine.py  harvard_mark_i.py  hollerith_tabulator.py  jacquard.py  kinematics.py  leibniz_reckoner.py  lovelace_notes.py  ludgate.py  machine.py  machine_registry.py  manchester_baby.py  materials.py  millionaire_calculator.py  napiers_bones.py  note_g_assembly.py  note_g_deck.py  odhner_arithmometer.py  pascaline.py  (+22 more)
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_bernoulli_numbers.py  test_caching.py  test_execution_api.py  test_health.py  test_performance_benchmarks.py  test_security_validation.py  test_timeline_api.py
frontend/: .eslintrc.json  .prettierignore  BUILD.bazel  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/docs/: API_INTEGRATION.md  DEBUGGER_USAGE.md  EMULATOR_VISUALIZATION_GUIDE.md  PROFILER_GUIDE.md
frontend/e2e/: emulator.spec.ts
frontend/src/: app.html
(+1050 files in other folders)
