# Ancient Compute Backend Build Configuration

load("@rules_python//python:defs.bzl", "py_library", "py_binary", "py_test")

# Backend library
py_library(
    name = "backend_lib",
    srcs = glob(
        ["src/**/*.py"],
        exclude = ["src/**/*_test.py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//shared:common_types",
    ],
)

# Backend server binary
py_binary(
    name = "server",
    srcs = ["src/main.py"],
    main = "src/main.py",
    deps = [":backend_lib"],
    visibility = ["//visibility:public"],
)

# Tests
py_test(
    name = "backend_test",
    srcs = glob(["tests/**/*_test.py"]),
    deps = [
        ":backend_lib",
    ],
    python_version = "PY3",
)

# Export requirements for Docker builds
exports_files([
    "requirements.txt",
    "Dockerfile",
])
