# Ancient Compute Backend Build Configuration

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# Backend library
py_library(
    name = "backend_lib",
    srcs = glob(
        ["src/**/*.py"],
        exclude = ["src/**/*_test.py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//shared:common_types",
    ],
)

# Backend server binary
py_binary(
    name = "server",
    srcs = ["src/main.py"],
    main = "src/main.py",
    visibility = ["//visibility:public"],
    deps = [":backend_lib"],
)

# Tests
py_test(
    name = "backend_test",
    srcs = glob(["tests/**/*_test.py"]),
    python_version = "PY3",
    deps = [
        ":backend_lib",
    ],
)

# Export requirements for Docker builds
exports_files([
    "requirements.txt",
    "Dockerfile",
])
