# Ancient Compute Frontend Build Configuration

load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm//:defs.bzl", "npm_link_all_packages")

# Link all npm packages
npm_link_all_packages(name = "node_modules")

# Frontend package
pkg_npm(
    name = "frontend_pkg",
    package_name = "@ancient-compute/frontend",
    srcs = glob([
        "src/**/*",
        "static/**/*",
        "*.json",
        "*.js",
        "*.ts",
    ]),
    visibility = ["//visibility:public"],
)

# Export files for Docker builds
exports_files([
    "package.json",
    "Dockerfile",
    "svelte.config.js",
    "vite.config.js",
    "tsconfig.json",
])
